# leishmania-screen

./: LICENSE  README.md  pyproject.toml
leishmania_screen/: __init__.py  _features.py  _model.py  _predict.py  cli.py
leishmania_screen/data/: NN_model.pth  pca_100_LD.pkl  scalers_LD.pkl  selected_features_LD.pkl  train_columns_LD.pkl
